check_output.txt
    Updating crates.io index
 Downloading crates ...
  Downloaded uuid-macro-internal v1.18.1
  Downloaded sct v0.7.1
  Downloaded unicase v2.8.1
  Downloaded axum-macros v0.4.2
  Downloaded rand_core v0.9.3
  Downloaded rand v0.9.2
  Downloaded http v1.3.1
  Downloaded multer v3.1.0
  Downloaded mime_guess v2.0.5
  Downloaded quick-xml v0.31.0
  Downloaded rustls-webpki v0.101.7
  Downloaded h2 v0.4.12
  Downloaded csv-core v0.1.13
  Downloaded zerocopy v0.8.28
  Downloaded webpki-roots v0.25.4
  Downloaded rustls v0.21.12
  Downloaded rand_chacha v0.9.0
  Downloaded http-range-header v0.4.2
  Downloaded futures-macro v0.3.31
  Downloaded csv v1.4.0
    Checking bibliogenius v0.1.0 (/app)
error[E0432]: unresolved import `crate::export`
 --> src/api/data.rs:8:21
  |
8 | use crate::{import, export, models::book};
  |                     ^^^^^^
  |                     |
  |                     no `export` in the root
  |                     help: a similar name exists in the module: `import`
  |
  = help: consider importing this module instead:
          crate::api::export

warning: unused import: `self`
 --> src/api/user.rs:1:27
  |
1 | use crate::models::user::{self, Entity as User};
  |                           ^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `LoaderTrait`
 --> src/api/peer.rs:9:5
  |
9 |     LoaderTrait,
  |     ^^^^^^^^^^^

warning: unused import: `Serialize`
 --> src/api/loan.rs:7:26
  |
7 | use serde::{Deserialize, Serialize};
  |                          ^^^^^^^^^

warning: unused import: `Serialize`
 --> src/api/integrations.rs:8:26
  |
8 | use serde::{Deserialize, Serialize};
  |                          ^^^^^^^^^

warning: unused import: `std::path::Path`
 --> src/api/scan.rs:9:5
  |
9 | use std::path::Path;
  |     ^^^^^^^^^^^^^^^

warning: unused import: `Query`
 --> src/api/batch.rs:2:22
  |
2 |     extract::{State, Query},
  |                      ^^^^^

warning: unused imports: `QueryOrder` and `QuerySelect`
 --> src/api/batch.rs:7:48
  |
7 | use sea_orm::{DatabaseConnection, EntityTrait, QueryOrder, QuerySelect, Set, ActiveModelTrait, ColumnTrait, QueryFilter};
  |                                                ^^^^^^^^^^  ^^^^^^^^^^^

warning: unused import: `Serialize`
 --> src/api/batch.rs:8:26
  |
8 | use serde::{Deserialize, Serialize};
  |                          ^^^^^^^^^

warning: unused import: `QuerySelect`
 --> src/api/search.rs:8:87
  |
8 |     ColumnTrait, Condition, DatabaseConnection, EntityTrait, QueryFilter, QueryOrder, QuerySelect,
  |                                                                                       ^^^^^^^^^^^

warning: unused import: `serde_json::json`
 --> src/api/gamification.rs:9:5
  |
9 | use serde_json::json;
  |     ^^^^^^^^^^^^^^^^

warning: unused imports: `HeaderMap` and `header`
 --> src/api/export.rs:5:24
  |
5 |     http::{StatusCode, HeaderMap, header},
  |                        ^^^^^^^^^  ^^^^^^

warning: unused import: `serde::Serialize`
 --> src/api/export.rs:8:5
  |
8 | use serde::Serialize;
  |     ^^^^^^^^^^^^^^^^

warning: variable does not need to be mutable
  --> src/api/search.rs:77:74
   |
77 |         let mut dtos: Vec<book::Book> = external_models.into_iter().map(|mut m| {
   |                                                                          ----^
   |                                                                          |
   |                                                                          help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `res`
  --> src/seed.rs:85:14
   |
85 |          let res = tag::Entity::insert(tag).on_conflict(
   |              ^^^ help: if this is intentional, prefix it with an underscore: `_res`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `EntityTrait`
 --> src/api/export.rs:7:35
  |
7 | use sea_orm::{DatabaseConnection, EntityTrait};
  |                                   ^^^^^^^^^^^

For more information about this error, try `rustc --explain E0432`.
warning: `bibliogenius` (lib) generated 15 warnings
error: could not compile `bibliogenius` (lib) due to 1 previous error; 15 warnings emitted
